// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollableList cycle renders current index at the beginning 1`] = `
"a
b
c"
`;

exports[`ScrollableList cycle renders current index at the end 1`] = `
"e
a
b"
`;

exports[`ScrollableList cycle renders current index in the middle 1`] = `
"c
d
e"
`;

exports[`ScrollableList overflow can customize labels with a function 1`] = `
"  [90m1 above[39m
b
c
d
  [90m1 below[39m"
`;

exports[`ScrollableList overflow can customize overflow labels 1`] = `
"  [90mAbove[39m
b
c
d
  [90mBelow[39m"
`;

exports[`ScrollableList overflow filters out leading disabled and dividers 1`] = `
"  [90m1 more[39m
c
d
e"
`;

exports[`ScrollableList overflow filters out trailing disabled and dividers 1`] = `
"a
b
c
  [90m1 more[39m"
`;

exports[`ScrollableList overflow renders current index at the beginning 1`] = `
"a
b
c
  [90m2 more[39m"
`;

exports[`ScrollableList overflow renders current index at the end 1`] = `
"  [90m2 more[39m
c
d
e"
`;

exports[`ScrollableList overflow renders current index in the middle 1`] = `
"  [90m1 more[39m
b
c
d
  [90m1 more[39m"
`;

exports[`ScrollableList supports rows that are more than 1 height 1`] = `
"a
a
b
b
  [90m3 more[39m"
`;
